func: added Wool Torch

--- a/src/main/resources/assets/hm/lang/en_us.lang
+++ b/src/main/resources/assets/hm/lang/en_us.lang
@@ -4,3 +4,4 @@ item.wool_cloth.name=Wool Cloth
 //Blocks
 tile.mud_block.name=Mud Block
 tile.clay_mound_block.name=Clay Mound
+tile.wool_torch_block.name=Wool Torch
