--- a/src/main/resources/assets/hm/lang/en_us.lang
+++ b/src/main/resources/assets/hm/lang/en_us.lang
@@ -6,3 +6,4 @@ item.seed_oil.name=Seed Oil
 tile.mud_block.name=Mud Block
 tile.clay_mound_block.name=Clay Mound
 tile.wool_torch_block.name=Wool Torch
+tile.clay_lamp_block.name=Clay Lamp
